horizontal scroll bug fix

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -82,10 +82,11 @@ html{
 
 body{
     margin:0px;
+    overflow-x: hidden !important;
 }
 
 .root{
-    
+    overflow-x: hidden !important;
 }
 
 .website{
@@ -93,6 +94,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-x: hidden !important;
 }
 
 /*** Dark Mode ***/
